build: update doc after user data model and controller changed (add role and names)
